# MriSegment

./: CMakeCache.txt  List.txt  List.txt~  README.md  README.md~  make.py  make.py~
LibMriCommon/Version1/: MriCommon.pro  MriCommon_global.h  dicomtomat.cpp  dicomtomat.h  mricommon.cpp  mricommon.h
src/.metadata/.plugins/org.eclipse.cdt.core/: MRIOpenCV.1399320320225.pdom  ManualSegment.1398104879376.pdom
src/.metadata/.plugins/org.eclipse.cdt.make.core/: MRICommon.sc  MRICommonTestDriver.sc  MRIOpenCV.sc  MRIPCL.sc  ManualSegment.sc  Test  1.sc  Test 2.sc  Test 3.sc  Test.sc  Test4.sc  Tools.sc
src/.metadata/.plugins/org.eclipse.cdt.ui/: cHelpSettings.xml  dialog_settings.xml
src/.metadata/.plugins/org.eclipse.core.resources/: .snap
src/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  4.tree
src/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
src/.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
src/.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
src/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
src/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workbench.xml  workingsets.xml
src/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
src/Conf/MRICommon/: Default.conf  Default.conf~
src/Conf/MRIOpenCV/: Default.conf  Default.conf~
src/Conf/knee/MRICommon/: Default.conf
src/Conf/knee/MRIOpenCV/: Default.conf  Default.conf~
src/Implementation/: wizard_selectregion.cpp  wizard_selectregion.h  wizard_selectregion.ui
src/Implementation/MRISegment/: MRISegment.pro
src/Implementation/gui/: CMakeLists.txt  CMakeLists.txt.user.7859e24.2.5pre1  CMakeLists.txt~  dataset.cpp  dataset.h  gui.pro  gui.pro.user.d9b943a.2.5pre1  layerslide.cpp  layerslide.h  layerslide.ui  layerslidewidget.cpp  layerslidewidget.h  loadworkerthread.cpp  loadworkerthread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_layerslide.cxx_parameters  moc_loadworkerthread.cxx_parameters  moc_mainwindow.cxx_parameters  moc_mriscene.cxx_parameters  moc_processworkerthread.cxx_parameters  moc_selectregionwidget.cxx_parameters  moc_tissueviewer.cxx_parameters  moc_welcomescreen.cxx_parameters  moc_wizard_loadimages.cxx_parameters  moc_wizard_processfiles.cxx_parameters  moc_wizard_selectimage.cxx_parameters  moc_wizardcontroller.cxx_parameters  moc_wizarddataconfig.cxx_parameters  mriscene.cpp  mriscene.h  processworkerthread.cpp  processworkerthread.h  resource.qrc  selectregionwidget.cpp  selectregionwidget.h  selectregionwidget.ui  tissueviewer.cpp  tissueviewer.cpp~  (+21 more)
src/Implementation/qtcreator-build/: CMakeCache.txt  Gui.cbp  Makefile  cmake_install.cmake  moc_dataset.cxx_parameters  moc_layerslide.cxx_parameters  moc_layerslidewidget.cxx_parameters  moc_loadworkerthread.cxx_parameters  moc_mainwindow.cxx_parameters  moc_mriscene.cxx_parameters  moc_processworkerthread.cxx_parameters  moc_selectregionwidget.cxx_parameters  moc_tissueviewer.cxx_parameters  moc_welcomescreen.cxx_parameters  moc_wizard_loadimages.cxx_parameters  moc_wizard_processfiles.cxx_parameters  moc_wizard_selectimage.cxx_parameters  moc_wizardcontroller.cxx_parameters  moc_wizarddataconfig.cxx_parameters
src/MRICommon/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  DicomLoader.cpp  DicomLoader.h  MRICommon.cpp  MRICommon.h  MRICommonSettings.cpp  MRIDataSet.cpp  MRIDataSet.h  MRISlice.cpp  MRISlice.h  MRISliceInfo.cpp  MRISliceInfo.h  MRITransformation.cpp  MRITransformation.h  Makefile  install_manifest.txt
src/MRIOpenCV/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  DebugView.cpp  DebugView.h  FindBoneFemer.cpp  FindBoneFemer.h  FindBoneFemurTrans.cpp  FindBoneFemurTrans.h  FindBonePatella.cpp  FindBonePatella.h  FindBoneTibia.cpp  FindBoneTibia.h  FindCartilage.cpp  FindCartilage.h  LabeledResults.cpp  LabeledResults.h  MRICommonSettings.cpp  MRICommonSettings.h  MRIOpenCV.cpp  MRIOpenCV.h  MRIOpenCVSettings.cpp  MRIOpenCVSettings.h  MRIProcess.cpp  MRIProcess.h  Makefile  RunAll.cpp  RunAll.h  cmake_install.cmake  install_manifest.txt
src/MRIOpenCV/Debug/: DebugView.d  makefile  subdir.mk
src/MRIPCL/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  CartilageOperation.cpp  CartilageOperation.h  CloudViewer.cpp  CloudViewer.h  FemerOperation.cpp  FemerOperation.h  JustPlotPlease.cpp  JustPlotPlease.h  MRIPCL.cpp  MRIPCL.h  MRIPCLProcess.cpp  MRIPCLProcess.h  PCLViewer.cpp  PCLViewer.h  PatellaOperation  PatellaOperation.cpp  PatellaOperation.h  RegPeriphs.cpp  RegPeriphs.h  RegPeriphsv1.cpp  RunAllPCL.cpp  RunAllPCL.h  RunAllPCLscripts.cpp  RunAllPCLscripts.h  RunAllPCLscripts.h~  TibiaOperation.cpp  TibiaOperation.h
src/MRIPCL/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
src/Modules/MRIOpenCV/Hip/: CMakeLists.txt  Femer.cpp  Femer.h  Hip.h  RunAll.cpp
src/Modules/MRIOpenCV/Knee/: CMakeLists.txt  FindBonePatella.cpp  FindBoneTibia.h  FindCartilage.cpp
src/Test/: .cproject  .project
src/Test/Implementation/MRICV/Test1/: .cproject  .project  CMakeLists.txt~  main.cpp  main.cpp.autosave  main.cpp~
src/Test/Implementation/MRICV/Test2/: .cproject  .project  CMakeLists.txt~  main.cpp
src/Test/Implementation/MRICV/Test3/: .cproject  .project  main.cpp
src/Test/Implementation/MRICommon/Test1/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  helloworld  main.cpp  main.cpp~
src/Tools/: .cproject  .project
src/Tools/ManualSegment/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  MRI  MRI.pro  Makefile  ManualSEG  boxregion.cpp  boxregion.h  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui  manualsegmentation.cpp  manualsegmentation.h  moc_mainwindow.cpp  moc_mrimanualscene.cpp  moc_mrimatrix.cpp  moc_mriscene.cpp  mrimanualscene.cpp  mrimanualscene.h  mrimatrix.cpp  mrimatrix.h  mriscene.h  record.h  recordhandel.cpp  recordhandel.h  regionselect.cpp  regionselect.h  ui_mainwindow.h
(+84 files in other folders)
